--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# sensitive information
+settings.ini
+
 ############################## React/Javascript #################################
 # dependencies
 node_modules
